# lemonade-challenge

./: .gitignore  README.md  prefect.yaml  project_utils.py  pyproject.toml
data-infra-prefect-develop/: .gitignore  Dockerfile  README.md  prefect.yaml  prefect_utils.py  project_utils.py  pyproject.toml
data-infra-prefect-develop/.github/workflows/: prefect-jobs.yaml
data-infra-prefect-develop/auto_scoring/: main.py
data-infra-prefect-develop/auto_scoring/functions/: correlation_matrix.py  correlation_to_snowflake.py  drivers.py  fetch_game_events.py  ratio_matrix.py  ratio_to_snowflake.py  s3_utils.py  upload_csv_files.py
data-infra-prefect-develop/auto_scoring/queries/: gameplay_data.sql
data-infra-prefect-develop/cloudwatch_data_donwloader/: config.py  main.py
data-infra-prefect-develop/cost_and_usage/: config.py  main.py  utils.py
data-infra-prefect-develop/drafts_events_from_s3/: config.py  drivers.py  main.py  utils.py
data-infra-prefect-develop/drafts_events_from_s3/queries/: get_production_games.sql  get_staging_games.sql
data-infra-prefect-develop/events_reloader/: config.py  events_api_sender.py  main.py  slack_messages.py
data-infra-prefect-develop/events_reloader/queries/: missing_events.sql  missing_events_by_dates.sql
data-infra-prefect-develop/events_schema_validator/: config.py  drivers.py  main.py  schema_manager.py  schema_validator.py  validation_reporter.py
data-infra-prefect-develop/health_checker/: README.md  config.py  main.py  utils.py
data-infra-prefect-develop/health_checker/tasks/: datalake_freshness.py  drivers.py  recommendations_api_health.py  snowpipe_freshness.py  tasks_config.py
data-infra-prefect-develop/ludeos_metadata_analyzer/: config.py  drivers.py  main.py  utils.py
data-infra-prefect-develop/ludeos_metadata_analyzer/context/: environment.txt  images.txt  tags.txt  (+2 more)
data-infra-prefect-develop/recommendations/: README.md
data-infra-prefect-develop/respark_emr_jobs/: config.py  main.py
data-infra-prefect-develop/sql_reports/: config.py  drivers.py  main.py  utils.py
data-infra-prefect-develop/tableau_reports_sender/: config.py  context_file.txt  main.py
data-infra-prefect-develop/update_postgres_events_metadata/: crud.py  drivers.py  events_metadata.py  main.py
data-infra-prefect-develop/weaviate/: README.md
(+54 files in other folders)
