[tool.poetry]
name = "lemonade-data-ingestion"
version = "0.1.0"
description = "Lemonade Data Engineering Challenge - Vehicle Events Ingestion Pipeline"
authors = ["Lemonade Challenge"]
readme = "README.md"
packages = [
    {include = "prefect_jobs"},
    {include = "data_utils"},
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
prefect = "^2.19.2"
prefect-aws = "^0.4.17"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.0"
# psycopg2-binary = "^2.9.9"  # Not needed - this project uses SQLite only
# In production: Would use psycopg2-binary for PostgreSQL (metadata)
#                Would use snowflake-connector-python for Snowflake (aggregation layer)
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
boto3 = "^1.34.0"
pyiceberg = {extras = ["pyarrow", "s3fs"], version = "^0.6.0"}
pyarrow = "^14.0.0"
pyspark = ">=3.5.0"
duckdb = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.11.0"
ruff = "^0.1.6"
numpy = "<2"
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
